# projeto_streamlit

./: README.md  cadastro.py  clientes.csv  pyproject.toml
